[gd_scene load_steps=26 format=2]

[ext_resource path="res://player/RM001/RM001.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/RM003/RM003.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/RM002/RM002.tscn" type="PackedScene" id=3]
[ext_resource path="res://stages/main/rmnt_select.gd" type="Script" id=4]
[ext_resource path="res://stages/main/mob_stage_select.gd" type="Script" id=5]
[ext_resource path="res://stages/main/RM001-Icon.png" type="Texture" id=6]
[ext_resource path="res://stages/main/RM003-Icon.png" type="Texture" id=7]
[ext_resource path="res://stages/main/StagePreviewBorder.png" type="Texture" id=8]
[ext_resource path="res://stages/main/StageMain.png" type="Texture" id=9]
[ext_resource path="res://stages/main/RM002-Icon.png" type="Texture" id=10]
[ext_resource path="res://stages/main/RmntSelect-R.png" type="Texture" id=11]
[ext_resource path="res://stages/Stage002.png" type="Texture" id=12]
[ext_resource path="res://stages/main/RM001-IconSelected.png" type="Texture" id=13]
[ext_resource path="res://stages/main/RmntSelect-L.png" type="Texture" id=14]
[ext_resource path="res://stages/main/StageSelectSelected.png" type="Texture" id=15]
[ext_resource path="res://stages/main/StageSelectUnselected.png" type="Texture" id=16]
[ext_resource path="res://stages/main/stage_main.gd" type="Script" id=17]
[ext_resource path="res://stages/main/Confirm.png" type="Texture" id=18]
[ext_resource path="res://stages/main/Cancel.png" type="Texture" id=19]
[ext_resource path="res://stages/main/Interact.png" type="Texture" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 37.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60, 90 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 4 )

[sub_resource type="Animation" id=4]
resource_name = "Interact"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("InteractLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 45, 20 ), Vector2( 45, 21 ), Vector2( 45, 20 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("InteractLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 45, 18 ) ]
}

[node name="StageMain" type="Node2D"]
script = ExtResource( 17 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RmntSelect" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -28.0
margin_right = 82.0
margin_bottom = -4.0
alignment = 1
script = ExtResource( 4 )

[node name="Left" type="TextureRect" parent="CanvasLayer/RmntSelect"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 14 )

[node name="RM001" type="TextureRect" parent="CanvasLayer/RmntSelect"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0
texture = ExtResource( 13 )

[node name="RM002" type="TextureRect" parent="CanvasLayer/RmntSelect"]
margin_left = 56.0
margin_right = 80.0
margin_bottom = 24.0
texture = ExtResource( 10 )

[node name="RM003" type="TextureRect" parent="CanvasLayer/RmntSelect"]
margin_left = 84.0
margin_right = 108.0
margin_bottom = 24.0
texture = ExtResource( 7 )

[node name="RM004" type="TextureRect" parent="CanvasLayer/RmntSelect"]
margin_left = 112.0
margin_right = 136.0
margin_bottom = 24.0
texture = ExtResource( 6 )

[node name="Right" type="TextureRect" parent="CanvasLayer/RmntSelect"]
margin_left = 140.0
margin_right = 164.0
margin_bottom = 24.0
texture = ExtResource( 11 )

[node name="MobStageSelect" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="BG" type="ColorRect" parent="CanvasLayer/MobStageSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.231373, 0.231373, 0.231373, 0.901961 )

[node name="Selection" type="Control" parent="CanvasLayer/MobStageSelect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -70.0
margin_right = 120.0
margin_bottom = 60.0

[node name="Preview" type="TextureRect" parent="CanvasLayer/MobStageSelect/Selection"]
anchor_left = 0.167
anchor_top = 0.169
anchor_right = 0.833
anchor_bottom = 0.862
margin_left = -80.08
margin_top = -44.97
margin_right = 80.08
margin_bottom = 44.94
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 160, 90 )
texture = ExtResource( 12 )

[node name="PreviewBorder" type="TextureRect" parent="CanvasLayer/MobStageSelect/Selection"]
anchor_left = 0.167
anchor_top = 0.169
anchor_right = 0.833
anchor_bottom = 0.862
margin_left = -0.0800018
margin_top = 0.0299988
margin_right = 0.0799866
margin_bottom = -0.0600052
rect_pivot_offset = Vector2( 160, 90 )
texture = ExtResource( 8 )

[node name="SelectIcons" type="HBoxContainer" parent="CanvasLayer/MobStageSelect/Selection"]
anchor_left = 0.167
anchor_top = 0.9
anchor_right = 0.833
anchor_bottom = 0.962
margin_left = -0.0800018
margin_right = 160.08
margin_bottom = 7.93999
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 8
alignment = 1

[node name="Select1" type="TextureRect" parent="CanvasLayer/MobStageSelect/Selection/SelectIcons"]
margin_left = 116.0
margin_right = 132.0
margin_bottom = 16.0
texture = ExtResource( 15 )

[node name="Select2" type="TextureRect" parent="CanvasLayer/MobStageSelect/Selection/SelectIcons"]
margin_left = 140.0
margin_right = 156.0
margin_bottom = 16.0
texture = ExtResource( 16 )

[node name="Select3" type="TextureRect" parent="CanvasLayer/MobStageSelect/Selection/SelectIcons"]
margin_left = 164.0
margin_right = 180.0
margin_bottom = 16.0
texture = ExtResource( 16 )

[node name="Select4" type="TextureRect" parent="CanvasLayer/MobStageSelect/Selection/SelectIcons"]
margin_left = 188.0
margin_right = 204.0
margin_bottom = 16.0
texture = ExtResource( 16 )

[node name="Left" type="TextureRect" parent="CanvasLayer/MobStageSelect/Selection"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 88.0
margin_top = -11.0
margin_right = 112.0
margin_bottom = 13.0
texture = ExtResource( 11 )

[node name="Right" type="TextureRect" parent="CanvasLayer/MobStageSelect/Selection"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -11.0
margin_right = -88.0
margin_bottom = 13.0
texture = ExtResource( 14 )

[node name="Confirm" type="TextureRect" parent="CanvasLayer/MobStageSelect/Selection"]
anchor_left = 0.333
anchor_right = 0.467
anchor_bottom = 0.123
margin_left = 0.0800018
margin_right = -0.0800018
margin_bottom = 0.00999928
texture = ExtResource( 18 )

[node name="Cancel" type="TextureRect" parent="CanvasLayer/MobStageSelect/Selection"]
anchor_left = 0.533
anchor_right = 0.667
anchor_bottom = 0.123
margin_left = 0.0799866
margin_right = -0.0800171
margin_bottom = 0.00999928
texture = ExtResource( 19 )

[node name="WorldStaticBody" type="StaticBody2D" parent="."]
collision_mask = 18

[node name="Background" type="Sprite" parent="WorldStaticBody"]
position = Vector2( 160, 90 )
z_index = -2
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldStaticBody"]
position = Vector2( 160, 37.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WorldStaticBody"]
position = Vector2( 160, 216 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldStaticBody"]
position = Vector2( 376, 90 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WorldStaticBody"]
position = Vector2( -56, 90 )
shape = SubResource( 2 )

[node name="World" type="YSort" parent="."]

[node name="MobStageSelectArea" type="Area2D" parent="World"]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/MobStageSelectArea"]
position = Vector2( 44.5, 78 )
shape = SubResource( 3 )

[node name="InteractLabel" type="Sprite" parent="World/MobStageSelectArea"]
visible = false
position = Vector2( 45, 18 )
texture = ExtResource( 20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="World/MobStageSelectArea"]
autoplay = "Interact"
anims/Interact = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="RM001" parent="World" instance=ExtResource( 1 )]
position = Vector2( 160, 120 )

[node name="RM002" parent="World" instance=ExtResource( 3 )]
position = Vector2( 160, 120 )

[node name="RM003" parent="World" instance=ExtResource( 2 )]
position = Vector2( 160, 120 )

[node name="RM004" parent="World" instance=ExtResource( 2 )]
position = Vector2( 160, 120 )
